Fixing header alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,8 +8,13 @@ p{
     color: rgba(24, 110, 240, 0.952);
 }
 
-.header{
-    font-size: 36;
-    text-shadow: 2px;
+.Header{
+    font-size: 56;
+    text-shadow: 10px;
     text-align: center;
+    position: absolute;
+    top: 50%; /* Position the top edge of the container at the vertical center */
+    left: 50%; /* Position the left edge of the container at the horizontal center */
+    transform: translate(-50%, -50%); /* Center the container precisely */
+
 }
